testdata/baselines/reference/submodule/conformance/importTag4.errors.txt
/foo.js(2,4): error TS8006: 'import type' declarations can only be used in TypeScript files.
/foo.js(2,14): error TS2300: Duplicate identifier 'Foo'.
/foo.js(6,4): error TS8006: 'import type' declarations can only be used in TypeScript files.
/foo.js(6,14): error TS2300: Duplicate identifier 'Foo'.
/foo.js(10,12): error TS8010: Type annotations can only be used in TypeScript files.


==== /types.ts (0 errors) ====
    export interface Foo {
        a: number;
    }
    
==== /foo.js (5 errors) ====
    /**
     * @import { Foo } from "./types"
       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8006: 'import type' declarations can only be used in TypeScript files.
                 ~~~
!!! error TS2300: Duplicate identifier 'Foo'.
     */
    
    /**
     * @import { Foo } from "./types"
       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8006: 'import type' declarations can only be used in TypeScript files.
                 ~~~
!!! error TS2300: Duplicate identifier 'Foo'.
     */
    
    /**
     * @param { Foo } foo
               ~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     */
    function f(foo) {}
    